<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/gas"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/date"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/metricElecticity"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/add_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/view_history"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />


    <!--    <TableLayout-->
    <!--        android:layout_width="365dp"-->
    <!--        android:layout_height="400dp"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:stretchColumns="1"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_column="1"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Open..." />-->

    <!--            <TextView-->
    <!--                android:gravity="right"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Ctrl-O" />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_column="1"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Save..." />-->

    <!--            <TextView-->
    <!--                android:gravity="right"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Ctrl-S" />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_column="1"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Save As..." />-->

    <!--            <TextView-->
    <!--                android:gravity="right"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Ctrl-Shift-S" />-->
    <!--        </TableRow>-->

    <!--        <View-->
    <!--            android:layout_height="2dip"-->
    <!--            android:background="#FF909090" />-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:padding="3dip"-->
    <!--                android:text="X" />-->

    <!--            <TextView-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Import..." />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:padding="3dip"-->
    <!--                android:text="X" />-->

    <!--            <TextView-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Export..." />-->

    <!--            <TextView-->
    <!--                android:gravity="right"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Ctrl-E" />-->
    <!--        </TableRow>-->

    <!--        <View-->
    <!--            android:layout_height="2dip"-->
    <!--            android:background="#FF909090" />-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_column="1"-->
    <!--                android:padding="3dip"-->
    <!--                android:text="Quit" />-->
    <!--        </TableRow>-->
    <!--    </TableLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>